platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_81.platter
piece of x = 2;

table of Food = [piece of qty;];

start(){
  Food of hotdog = [a;];
    
  bill();
}